@@ -8,21 +8,13 @@ open Microsoft.VisualStudio.TestPlatform.ObjectModel
 open Microsoft.VisualStudio.TestPlatform.ObjectModel.Adapter
 open Microsoft.VisualStudio.TestPlatform.ObjectModel.Logging
 
-type String() =
-    static member JoinBy(str, elements, mapping) =
-        String.Join(str, elements |> Seq.map mapping)
-
 [<ExtensionUri(Constants.identifierUri)>]
 type GoogleTestExecutor() =
     let mutable cancelled = false
 
-    let runOnce (framework : IFrameworkHandle) (runContext : IRunContext) cases executable runAll = 
+    let runOnce (framework : IFrameworkHandle) (runContext : IRunContext) allCases cases executable runAll = 
         let outputPath = IO.Path.GetTempFileName()
-        let filter =
-            let fqn (c:TestCase) = c.FullyQualifiedName
-            if runAll then ""
-            else sprintf "--gtest_filter=%s" (String.JoinBy(":", cases, fqn))
-        let arguments = (sprintf "--gtest_output=xml:%s %s" outputPath filter)
+        let arguments = GoogleTestCommandLine(runAll, allCases, cases, outputPath).GetCommandLine()
         
         let wd = IO.Path.GetDirectoryName executable
         cases |> List.iter framework.RecordStart
@@ -35,12 +27,12 @@ type GoogleTestExecutor() =
         let results = ResultParser.getResults framework outputPath cases
         results |> List.iter framework.RecordResult
 
-    let runTests (tests : IEnumerable<TestCase>) (runContext : IRunContext) (framework : IFrameworkHandle) runAll =
-        let cases = tests |> Seq.groupBy(fun c -> c.Source) |> List.ofSeq
+    let runTests allCases (cases : IEnumerable<TestCase>) (runContext : IRunContext) (framework : IFrameworkHandle) runAll =
+        let cases = cases |> Seq.groupBy(fun c -> c.Source) |> List.ofSeq
         for executable, cases in cases do
             if not(cancelled) then
                 try
-                    runOnce framework runContext (cases |> List.ofSeq) executable runAll
+                    runOnce framework runContext allCases (cases |> List.ofSeq) executable runAll
                 with e ->
                     framework.SendMessage(TestMessageLevel.Error, e.Message)
                     framework.SendMessage(TestMessageLevel.Error, e.StackTrace)
@@ -51,12 +43,18 @@ type GoogleTestExecutor() =
 
         override x.RunTests(tests : IEnumerable<TestCase>, runContext : IRunContext, framework : IFrameworkHandle) =
             cancelled <- false
-            runTests tests runContext framework false
+            let allTestCasesInAllExecutables = 
+                tests
+                |> Seq.map(fun f -> f.Source)
+                |> Seq.distinct
+                |> List.ofSeq
+                |> List.map (fun f -> DiscovererUtils.getTestsFromExecutable framework f |> List.ofArray)
+                |> List.concat
+            runTests allTestCasesInAllExecutables tests runContext framework false
 
         override x.RunTests(tests : IEnumerable<string>, runContext : IRunContext, framework : IFrameworkHandle) =
             cancelled <- false
             for executable in tests do
                 if not(cancelled) then
-                    let allCases = DiscovererUtils.getTestsFromExecutable framework executable
-                    runTests allCases runContext framework true
-
+                    let allCases = DiscovererUtils.getTestsFromExecutable framework executable |> List.ofSeq
+                    runTests allCases allCases runContext framework true
